fixed reminder modal white space

--- a/client/src/components/ListReminders.scss
+++ b/client/src/components/ListReminders.scss
@@ -90,6 +90,9 @@
         left: 49%;        
     }
 }
+.reminder {
+    min-height: 500px;
+}
 
 @media screen and (max-width: 400px) {
     .modal-wrapper {
